[package]
name = "en-300-468-reader"
version = "0.3.1-alpha.0"
authors = ["David Holroyd <dave@badgers-in-foil.co.uk>"]
description = "Reader for MPEG TS data formatted according to ETSI standard EN 300 486"
categories = [ "multimedia::video", "parser-implementations" ]
repository = "https://github.com/dholroyd/en-300-468-reader"
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
mpeg2ts-reader = "0.18.2"
encoding = "0.2"
log = "0.4"
